Actualizei o script de referência
Adicionei evento de click e scroll no Windows para omitir o conteúdo e/ou a linha de referência se o usuário a ficha para além da viewport.

--- a/styles/ficha.css
+++ b/styles/ficha.css
@@ -573,6 +573,11 @@ div.reference-container {
     z-index: 1001;
     background-color: var(--azulCiano);
     display: none;
+    transition-duration: 400ms;
+}
+
+div.reference-container.hidden {
+    bottom: -40px;
 }
 
 @media screen and (max-width: 1300px) {
