--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -345,7 +345,6 @@ main {
     color: var(--gray)
 }
 
-
 /* LINHA DE REFERENCIA */
 .reference-container {
     position: fixed;
@@ -403,7 +402,7 @@ main {
 /* Manipulacao com JS */
 @media screen {
     .--realcar-totais {
-        background-color: var(--gray--c);
+        background-color: var(--gray--c) !important;
     }
 }
 
@@ -647,10 +646,21 @@ details mark {
     margin-left: 15px;
 }
 
+.details__moldura--display-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 243px);
+    grid-column-gap: 4px;
+    overflow: auto;
+}
+
+.details__moldura--display-grid figcaption {
+    grid-row: 2;
+    grid-column: 1/3;
+}
+
 .details__moldura__legenda {
     font-size: 12px;
-    font-style: italic;
-    margin-top: 5px;
+    margin-top: 15px;
 }
 
 .details-salvar-ficha-como-pdf li {
@@ -750,10 +760,16 @@ details mark {
     background-color: var(--gray--4);
     position: fixed;
     top: -35px;
-    right: calc(50vw - 264px / 2);
+    right: calc(50vw - 266px / 2);
     visibility: hidden;
     transition: top .2s linear;
     z-index: 666;
+}
+
+@media screen and (max-width: 1023px) {
+    .dialog-box-ir-para {
+        right: calc(50vw - 277px / 2);
+    }
 }
 
 .dialog-box-ir-para.--open {
@@ -774,19 +790,41 @@ details mark {
     border-color: var(--purple);
 }
 
-.dialog-box-ir-para__btn-fechar {
+.dialog-box-ir-para__btn {
     width: 24px;
-    height: 20px;
+    margin: 0 2px;
     font-weight: 700;
-    background-color: inherit;
-    color: var(--yt);
-    font-size: 16px;
-    margin-left: 2px
 }
 
-.dialog-box-ir-para__btn-fechar:hover {
+@media screen and (max-width: 1023px) {
+    .dialog-box-ir-para__btn {
+        width: 35px;
+    }
+}
+
+.dialog-box-ir-para__btn:active {
+    opacity: .7;
+}
+
+.dialog-box-ir-para__btn:hover {
+    border-radius: 2px;
+    background-color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--ir {
+    font-size: 14px;
+    border-radius: 1px;
+}
+
+.dialog-box-ir-para__btn--fechar {
+    height: 20px;
+    font-size: 16px;
+    background-color: inherit;
+    color: var(--yt);
+}
+
+.dialog-box-ir-para__btn--fechar:hover {
     background-color: var(--cor-de-risco);
-    border-radius: 2px
 }
 
 .dialog-box-esvaziar-ficha {
