--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -7,7 +7,7 @@
     --cor-de-realce: #dce4f4;
     --cor-do-rodape: #f4f4f4;
     --cor-de-risco: #dd0000;
-    --cor-de-risco-alfa-8: rgba(238, 0, 0, .8);
+    --fullred: #ff0000;
     --cor-de-duplicado: yellow;
     --cor-de-triplicado: #e0edf3;
     --fullblack: #000000;
@@ -966,7 +966,7 @@ details mark {
 }
 
 .dialog-box-esvaziar-ficha__btn--confirmar:hover {
-    background-color: var(--cor-de-risco-alfa-8)
+    background-color: var(--fullred)
 }
 
 .desfoque.on {
