HTML: Adicionei o link de acesso ao Totalizador de Mapa Resumo Mensal de Caixa.

--- a/anatomia/ficha.css
+++ b/anatomia/ficha.css
@@ -133,7 +133,7 @@
     display: inline-block;
     width: 190px;
     text-align: center;
-    color: var(--brown);
+    color: var(--cor-de-risco);
     font-size: 20px;
     font-weight: 700;
     font-family: 'Times New Roman',Times,serif!important
