HTML/CSS: Adicionei meus contactos (Email e WhatsApp) no rodapé do artigo 'Ajuda' para pedido de suporte. Encurtei algumas classes e nomeiei mais elementos com classes BEM e reescrevi os estilos de forma mais minifica. JS: actualizei as classes modificadas no html às quais algumas variáveis se referem.

--- a/anatomia/ficha.css
+++ b/anatomia/ficha.css
@@ -91,6 +91,16 @@
     border-bottom: 1px solid var(--cor-de-borda);
     background-color: initial;
 }
+@media screen {
+    .input--realcar-totais:focus,
+    .input--realcar-totais {
+        background-color: var(--gray--c) !important;
+    }
+}
+.input--bg-color-danger {
+    background-color: var(--cor-de-risco) !important;;
+    color: var(--yt)
+}
 .ficha__col-com-titulo {
     display: grid;
     grid-template-rows: 86px 27px
