--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -22,9 +22,11 @@
     --gray--light: #f0f0f0;
     --blue: #0060EE;
     --blue--light: #2573b5;
+    --blue--highlight: lightblue;
     --purple: rgb(116, 116, 235);
     --orange: #faa032;
-    --greenyellow:greenyellow;
+    --cor-de-realce-de-totais: #ffff71;
+    --greenyellow: #adff2f;
     --brown: brown;
     --reference-bgc: var(--black--alpha-8);
     --layout-width: 1336px;
@@ -65,6 +67,11 @@
     margin: 0 auto;
     padding: 0 15px;
 }
+@media screen and (max-width: 1336px) {
+    .layout-row {
+        padding: 0;
+    }
+}
 .layout-row--no-padding {
     padding: 0;
 }
@@ -94,11 +101,11 @@
         padding: 0;
     }
 }
-.logo__snippet--hide-on-screen-til-360 {
+.logo__snippet--hide-on-screen-til-359px {
     display: none;
 }
 @media screen and (min-width: 360px) {
-    .logo__snippet--hide-on-screen-til-360 {
+    .logo__snippet--hide-on-screen-til-359px {
         display: initial;
     }
 }
@@ -145,10 +152,10 @@
 .header__menu__checkbox {
     width: 12px;
     height: 11px;
-    margin: 1px 4px 3px 0;
+    margin: 1px 0 3px;
 }
 .header__menu__label {
-    padding: 7.5px 12px 7.5px 0;
+    padding: 7.5px 12px 7.5px 4px;
     font-size: 12px;
     min-height: 44px;
 }
@@ -180,7 +187,7 @@
 .main__campo-de-comentarios {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
-    min-width: 880px;
+    width: calc(var(--layout-width) - 12px);
     padding: 5px;
     border: 1px solid var(--cor-de-borda);
     font-size: 13px;
@@ -514,16 +521,16 @@ details[open] .details__summary {
     column-gap: 4px;
     overflow: auto;
 }
+.details__moldura--display-grid figcaption {
+    grid-row: 2;
+    grid-column: 1 / 3;
+}
 .details__moldura--margin-l {
     margin-left: 15px;
 } 
 .details__moldura__legenda {
     font-size: 12px;
     margin-top: 15px;
-}
-.details__moldura--display-grid figcaption {
-    grid-row: 2;
-    grid-column: 1 / 3;
 }
 .artigo__details--salvar-ficha-como-pdf li {
     line-height: 2;
