--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -189,15 +189,17 @@
 @media print {
     .layout-row--obs{
         border: none;
-        padding-left: 0;
+        padding: 0;
     }
 }
-.layout-row--obs.--focus {
-    border: 2px solid var(--blue);
-    background-color: var(--greenyellow);
+@media screen {
+    .layout-row--obs.--focus {
+        border: 2px solid var(--blue);
+        background-color: var(--greenyellow);
+    }
 }
 .obs__label {
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 15px;
     background-color: var(--blue--cobalt);
     color: var(--yt);
@@ -205,6 +207,7 @@
 @media print {
     .obs__label {
         padding-left: 0;
+        padding-right: 5px;
         background-color: var(--yt);
         color: var(--fullblack);
     }
@@ -215,6 +218,7 @@
     padding: 5px 0px;
     margin-left: 2px;
     cursor: text;
+    text-align: justify;
 }
 .obs__input:focus {
     outline: 0;
