--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -110,7 +110,6 @@
         display: initial;
     }
 }
-/* MENU */
 .header__menu__ul {
     width: 100%;
     display: flex;
@@ -168,7 +167,6 @@
         display: none;
     }
 }
-/* MAIN */
 @media screen and (max-width: 1336px) {
     #main {
         max-width: 100%;
@@ -223,7 +221,6 @@
 .obs__input:focus {
     outline: 0;
 }
-/* Footer */
 .footer {
     font-size: 12px;
     background-color: var(--cor-do-rodape);
@@ -498,10 +495,10 @@
     left: 15px;
 }
 .artigo-ajuda__p--contactar-suporte {
-    --bg-color: #f5f5f5;
+    --gray--light: #f5f5f5;
     font-size: 12px;
     margin-top: 20px;
-    background-color: var(--bg-color);
+    background-color: var(--gray--light);
     padding: 15px;
 }
 .artigo__lista {
@@ -581,7 +578,6 @@ details[open] .details__summary {
 .artigo__details--salvar-ficha-como-pdf li {
     line-height: 2;
 }
-/* Caixas de diálogo */
 .dialog-box-default {
     width: 100%;
     max-width: var(--layout-width);
@@ -624,7 +620,6 @@ details[open] .details__summary {
 .dialog-box-default__title {
     padding: 8px 15px;
     background-color: var(--yt);
-    color: var(--gray--5);
     white-space: nowrap;
     width: 100%;
     overflow: hidden;
@@ -640,16 +635,20 @@ details[open] .details__summary {
     min-height: 60px;
 }
 .dialog-box-default__btn {
+    --gray--light:#e1e1e1;
+    --gray--a:#adadad;
     min-width: 130px;
     margin: auto;
     padding: 5px;
-    border: 1px solid var(--gray--c);
+    background-color: var(--gray--light);
+    border: 1px solid var(--gray--a);
     font-size: 13px;
     display: block;
     transition-duration: .4s;
-    color: var(--gray--5);
+    color: var(--cor-de-texto);
 }
 .dialog-box-default__btn:hover {
+    --cor-de-realce:#e5f1fb;
     background-color: var(--cor-de-realce);
     border-color: var(--cor-de-link);
     color: var(--cor-de-texto);
@@ -780,11 +779,20 @@ details[open] .details__summary {
     font-size: 14px;
     margin-bottom: 10px;
 }
-.dialog-box-esvaziar-ficha__p--first {
+.dialog-box-esvaziar-ficha__titulo--no-margin-b {
+    margin-bottom: 0;
+}
+.dialog-box-esvaziar-ficha__p {
     margin-bottom: 10px;
 }
-.dialog-box-esvaziar-ficha__p--last {
+.dialog-box-esvaziar-ficha__p--alerta {
     margin-top: 10px;
+    margin-bottom: 0;
+}
+.dialog-box-esvaziar-ficha__p--fs-small {
+    font-size: 11px;
+    color: var(--gray);
+    --gray: #787878;
 }
 .dialog-box-esvaziar-ficha__ul-dados-adicionais {
     max-height: 164px;
@@ -841,7 +849,7 @@ details[open] .details__summary {
 .dialog-box-esvaziar-ficha__btn--confirmar:hover {
     background-color: var(--fullred)
 }
-.desfoque.on {
+.desfoque.--on {
     width: 100vw;
     height: 100vh;
     position: fixed;
