--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -295,7 +295,6 @@
 .footer__p__heart {
     color: var(--heart-color);
 }
-/* LINHA DE REFERENCIA */
 .reference {
     position: fixed;
     bottom: 0;
@@ -341,7 +340,6 @@
         display: none;
     }
 }
-/* Artigos comuns */
 @media screen and (max-width: 1023px) {
     .seccao-de-artigos {
         border-top: 10px solid var(--gray--d);
@@ -657,7 +655,6 @@ details[open] .details__summary {
     width: 23px;
     cursor: pointer;
 }
-/* Caixa de diálogo ir para */
 .dialog-box-ir-para {
     justify-content: space-between;
     padding: 4px;
@@ -789,9 +786,8 @@ details[open] .details__summary {
     margin-bottom: 0;
 }
 .dialog-box-esvaziar-ficha__p--fs-small {
-    font-size: 11px;
-    color: var(--gray);
-    --gray: #787878;
+    font-size: 12px;
+    color: var(--gray--5);
 }
 .dialog-box-esvaziar-ficha__ul-dados-adicionais {
     max-height: 164px;
@@ -856,7 +852,6 @@ details[open] .details__summary {
     background-color: var(--black--alpha-5);
     z-index: 888;
 }
-/* Classes Reutilizaveis */
 /* Classes Reutilizaveis */
 .--cursor-pointer {
     cursor: pointer;
