--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -6,8 +6,8 @@
     --cor-de-realce: #dce4f4;
     --cor-do-rodape: #f4f4f4;
     --cor-de-risco: #dd0000;
-    --red: #ff0000;
     --cor-de-realce-de-totais: #ffff71;
+    --red: #ff0000;
     --black: #000000;
     --black-a5: rgba(0, 0, 0, .5);
     --black-a8: rgba(0, 0, 0, .8);
@@ -1066,12 +1066,27 @@ details[open] .details__summary {
         display: none;
     }
 }
+.ficha__url-pub {
+    display: none;
+}
 @media print {
     @page {
         margin: .5cm .5cm .62cm .5cm;
-        size: A4 landscape;
+         size: A4 landscape;
     }
     .--no-print {
         display: none;
+    }
+    .ficha__url-pub {
+        display: block;
+        font-size: 12px;
+        font-weight: 400;
+        position: fixed;
+        bottom: 13px;
+        left: 28px;
+        z-index: 1000000000;
+    }
+    .ficha__url-pub__link {
+        color: var(--cor-de-link);
     }
 }
