--- a/anatomia/layout.css
+++ b/anatomia/layout.css
@@ -1079,8 +1079,9 @@ details[open] .details__summary {
     }
     .ficha__url-pub {
         display: block;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: 400;
+        color: #555555;
         position: fixed;
         bottom: 13px;
         left: 28px;
